Implemented login, register and logout

--- a/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/Views/_Layout.html
+++ b/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/Views/_Layout.html
@@ -26,10 +26,10 @@
                         @if (User == null)
                         {
                             <li class="nav-item">
-                                <a class="nav-link nav-link-white active" href="/login">Login</a>
+                                <a class="nav-link nav-link-white active" href="/users/login">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-white active" href="/register">Register</a>
+                                <a class="nav-link nav-link-white active" href="/users/register">Register</a>
                             </li>
                         }
                         @else
@@ -38,7 +38,7 @@
                                 <a class="nav-link nav-link-white active" href="/followed">My Channels</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link nav-link-white active" href="/logout">Logout</a>
+                                <a class="nav-link nav-link-white active" href="/users/logout">Logout</a>
                             </li>
                         }
                     </ul>
