--- a/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/Views/Home/LoggedInIndex.html
+++ b/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/Views/Home/LoggedInIndex.html
@@ -19,8 +19,8 @@
                   <hr class="hr-2 bg-white text-white" />
                   Following
                   <hr class="hr-2 bg-white text-white" />
-                  <a href="/Channels/Follow?id=1" class="text-white">Follow</a> &nbsp;
-                  <a href="/Channels/Details?id=1" class="text-white">Details</a>
+                  <a href="/channels/follow?id=1" class="text-white">Follow</a>
+                  <a href="/channels/details?id=1" class="text-white">Details</a>
               </div>
         }
     </div>
