--- a/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/Views/Home/LoggedInIndex.html
+++ b/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/Views/Home/LoggedInIndex.html
@@ -1,32 +1,91 @@
-﻿<h1 class="text-center text-mishmash">Welcome, @User!</h1>
+﻿@if (Model.UserRole == "Admin")
+{
+<h1 class="text-center text-mishmash">Welcome, Admin-@User!</h1>
+}
+@else
+{
+<h1 class="text-center text-mishmash">Welcome, @User!</h1>
+}
+
+
 <h3 class="text-mishmash">Your channels</h3>
-<hr class="hr-2 bg-mishmash"/>
+<hr class="hr-2 bg-mishmash" />
 <div class="container-fluid fload-left">
     <div class="row" justify-content-around>
-        @for (var i = 0; i < 7; i++)
+        @for (var i = 0; i < Model.YourChannels.Count(); i++)
         {
-           @if (i % 5 == 0 && i > 1)
-           {
-                </div>
-                <div class="row justify-content-around mt-3">
-           }
-              <div class="col-md-2 bg-mishmash text-center text-white">
-                  Channel name
-                  <hr class="hr-2 bg-white text-white" />
-                  Game Channel
-                  <hr class="hr-2 bg-white text-white" />
-                  4500 Following
-                  <hr class="hr-2 bg-white text-white" />
-                  Following
-                  <hr class="hr-2 bg-white text-white" />
-                  <a href="/channels/follow?id=1" class="text-white">Follow</a>
-                  <a href="/channels/details?id=1" class="text-white">Details</a>
-              </div>
+              { var channel = Model.YourChannels.ToList()[i]; }
+             @if (i % 5 == 0 && i > 1)
+             {
+               </div>
+              <div class="row justify-content-around mt-3">
+        }
+
+                  <div class="col-md-2 bg-mishmash text-center text-white">
+                      @channel.Name
+                      <hr class="hr-2 bg-white text-white" />
+                      @channel.Type Channel
+                      <hr class="hr-2 bg-white text-white" />
+                      @channel.FollowersCount Followers
+                      <hr class="hr-2 bg-white text-white" />
+                      Following
+                  </div>
         }
     </div>
 </div>
+
 <h3 class="text-mishmash">Suggested</h3>
-<hr class="hr-2 bg-white text-white"/>
+<hr class="hr-2 bg-mishmash" />
+<div class="container-fluid fload-left">
+    <div class="row" justify-content-around>
+        @for (var i = 0; i < Model.SeeOtherChannels.Count(); i++)
+        {
+        { var channel = Model.SeeOtherChannels.ToList()[i]; }
+        @if (i % 5 == 0 && i > 1)
+        {
+    </div>
+    <div class="row justify-content-around mt-3">
+        }
+
+        <div class="col-md-2 bg-mishmash text-center text-white">
+            @channel.Name
+            <hr class="hr-2 bg-white text-white" />
+            @channel.Type Channel
+            <hr class="hr-2 bg-white text-white" />
+            @channel.FollowersCount Followers
+            <hr class="hr-2 bg-white text-white" />
+            <a href="/channels/follow?id=@channel.Id" class="text-white">Follow</a> &nbsp;
+            <a href="/channels/details?id=@channel.Id" class="text-white">Details</a>
+        </div>
+        }
+    </div>
+</div>
+
+
 
 <h3 class="text-mishmash">See Other</h3>
-<hr class="hr-2 bg-white text-white"/>
+<hr class="hr-2 bg-mishmash" />
+<div class="container-fluid fload-left">
+    <div class="row" justify-content-around>
+        @for (var i = 0; i < Model.SuggestedChannels.Count(); i++)
+        {
+        { var channel = Model.SuggestedChannels.ToList()[i]; }
+        @if (i % 5 == 0 && i > 1)
+        {
+    </div>
+    <div class="row justify-content-around mt-3">
+        }
+
+        <div class="col-md-2 bg-mishmash text-center text-white">
+            @channel.Name
+            <hr class="hr-2 bg-white text-white" />
+            @channel.Type Channel
+            <hr class="hr-2 bg-white text-white" />
+            @channel.FollowersCount Followers
+            <hr class="hr-2 bg-white text-white" />
+            <a href="/channels/follow?id=@channel.Id" class="text-white">Follow</a> &nbsp;
+            <a href="/channels/details?id=@channel.Id" class="text-white">Details</a>
+        </div>
+        }
+    </div>
+</div>
