--- a/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/Views/_Layout.html
+++ b/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/Views/_Layout.html
@@ -35,7 +35,7 @@
                         @else
                         {
                             <li class="nav-item">
-                                <a class="nav-link nav-link-white active" href="/followed">My Channels</a>
+                                <a class="nav-link nav-link-white active" href="/channels/followed">My Channels</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link nav-link-white active" href="/users/logout">Logout</a>
