--- a/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/Views/Home/LoggedInIndex.html
+++ b/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/Views/Home/LoggedInIndex.html
@@ -1,12 +1,14 @@
 ﻿@if (Model.UserRole == "Admin")
 {
-<h1 class="text-center text-mishmash">Welcome, Admin-@User!</h1>
+   <h1 class="text-center text-mishmash">Welcome, Admin-@User!</h1>
+   <div class="text-center">
+       <a class="btn btn-primary" href="/channels/create">Create channel</a>
+   </div>
 }
 @else
 {
-<h1 class="text-center text-mishmash">Welcome, @User!</h1>
+   <h1 class="text-center text-mishmash">Welcome, @User!</h1>
 }
-
 
 <h3 class="text-mishmash">Your channels</h3>
 <hr class="hr-2 bg-mishmash" />
