Added functionality in  MvcFramework

--- a/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/CakesWebApp/Views/Profile.html
+++ b/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/CakesWebApp/Views/Profile.html
@@ -1,10 +1,4 @@
-﻿<h1>My Pprofile</h1>
-<div class="form-group row">
-    <label class="form-control-label col-sm-2">Name: @Model.Username</label>
-</div>
-<div class="form-group row">
-    <label class="form-control-label col-sm-2">Registered on: @Model.RegisterOn</label>
-</div>
-<div class="form-group row">
-    <label class="form-control-label col-sm-2">Orders Count: @Model.OrdersCount</label>
-</div>
+﻿<h1>My Profile</h1>
+<div>Name: @Model.Username</div>
+<div>Registered on: @Model.RegisteredOn</div>
+<div>Orders Count: @Model.OrdersCount</div>
