--- a/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/CakesWebApp/Views/OrderById.html
+++ b/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/CakesWebApp/Views/OrderById.html
@@ -1,20 +1,20 @@
 ﻿@if (Model.IsShoppingCart)
 {
-<h1>Shopping Cart</h1>
+    <h1>Shopping cart</h1>
 }
 @else
 {
-<h1>Order with @Model.Id</h1>
+    <h1>Order with id @Model.Id</h1>
 }
 
 @if (Model.Products.Any())
 {
-   @foreach (var product in Model.Products)
-   {
-     <div>
-         <a href="/cakes/view?id=@product.Id">@product.Name</a> $@product.Price
-     </div>
-   }
+    @foreach(var product in Model.Products)
+    {
+        <div>
+            <a href="/cakes/view?id=@product.Id">@product.Name</a> $@product.Price
+        </div>
+    }
 }
 @else
 {
