--- a/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/CakesWebApp/Views/Search.html
+++ b/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/CakesWebApp/Views/Search.html
@@ -1,11 +1,11 @@
 ﻿<h1>Searching for @Model.SearchText</h1>
 @foreach (var cake in Model.Cakes)
 {
-<div>
-    <a href="/cakes/view?id=@cake.Id">@cake.Name</a> $@cake.Price
-    <form action="/orders/add" method="post">
-        <input type="hidden" name="productId" value="@cake.Id" />
-            <input type="submit" class="btn-primary" value="Order" />
-    </form>
-</div>
-} 
+    <div>
+        <a href="/cakes/view?id=@cake.Id">@cake.Name</a> $@cake.Price
+        <form action="/orders/add" method="post">
+            <input name="productId" type="hidden" value="@cake.Id" />
+            <input type="submit" class="btn-primary" value="Order"/>
+        </form>
+    </div>
+}
