--- a/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/CakesWebApp/Views/_Layout.html
+++ b/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/CakesWebApp/Views/_Layout.html
@@ -10,30 +10,28 @@
         <div class="col-md-3 col-sm-12">
             <ul class="list-group">
                 <li class="list-group-item"><i class="fas fa-home"></i> <a href="/">Home</a></li>
-                @if(User == null)
+                @if (!User.IsLoggedIn)
                 {
-                <li class="list-group-item"><i class="fas fa-user-check"></i> <a href="/account/login">Login</a></li>
-                <li class="list-group-item"><i class="fas fa-user-plus"></i> <a href="/account/register">Register</a></li>
+                    <li class="list-group-item"><i class="fas fa-user-check"></i> <a href="/account/login">Login</a></li>
+                    <li class="list-group-item"><i class="fas fa-user-plus"></i> <a href="/account/register">Register</a></li>
                 }
                 @else
                 {
-                <li class="list-group-item"><i class="fas fa-user"></i> <a href="/user/profile">My Profile</a></li>
-                <li class="list-group-item"><i class="fas fa-user"></i> <a href="/orders/list">My Orders</a></li>
-                <li class="list-group-item"><i class="fas fa-user-slash"></i> <a href="/account/logout">Logout</a></li>
+                    <li class="list-group-item"><i class="fas fa-user"></i> <a href="/user/profile">My Profile</a></li>
+                    <li class="list-group-item"><i class="fas fa-user"></i> <a href="/orders/list">My Orders</a></li>
+                    <li class="list-group-item"><i class="fas fa-user-slash"></i> <a href="/account/logout">Logout</a></li>
                 }
-
                 <li class="list-group-item"><i class="fas fa-home"></i> <a href="/cakes/add">Add cakes</a></li>
                 <li class="list-group-item">
                     <form action="/cakes/search" method="get">
-                        <input type="text" name="searchText" class="form-control" />
-                        <input type="submit" class="form-control btn-primary" value="Search" />
+                        <input type="text" name="searchText" class="form-control"/>
+                        <input type="submit" class="form-control btn-primary" value="Search"/>
                     </form>
                 </li>
             </ul>
         </div>
         <div class="col-md-9 col-sm-12">
             @RenderBody()
-
             <hr />
             { var year = DateTime.UtcNow.Year; }
             { year = year + 1; }
