--- a/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/Views/Channels/Create.html
+++ b/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/Views/Channels/Create.html
@@ -1,6 +1,7 @@
 ﻿<h1 class="text-center text-mishmash">Create Channel</h1>
 <hr class="bg-mishmash w-50 hr-2" />
-<form class="mx-auto w-50" method="post" action="/channels/create">
+
+<form class="mx-auto w-50" method="post" action="/Channels/Create">
     <div class="form-group">
         <label for="name" class="text-mishmash">Name</label>
         <input type="text" class="form-control" id="name" placeholder="Name..." name="name">
@@ -21,19 +22,19 @@
             <label for="Game" class="text-mishmash">Game</label>
         </div>
         <div class="col-md-2">
-            <input name="type" id="Motivation" value="Motivation" type="radio" />
+            <input name="type" id="Motivation" value="Motivation" type="radio"/>
             <label for="Motivation" class="text-mishmash">Motivation</label>
         </div>
         <div class="col-md-2">
-            <input name="type" id="Lessqons" value="Lessons" type="radio" />
+            <input name="type" id="Lessons" value="Lessons" type="radio"/>
             <label for="Lessons" class="text-mishmash">Lessons</label>
         </div>
         <div class="col-md-2">
-            <input name="type" id="Radio" value="Radio" type="radio" />
+            <input name="type" id="Radio" value="Radio" type="radio"/>
             <label for="Radio" class="text-mishmash">Radio</label>
         </div>
         <div class="col-md-2">
-            <input name="type" id="Other" value="Other" type="radio" />
+            <input name="type" id="Other" value="Other" type="radio"/>
             <label for="Other" class="text-mishmash">Other</label>
         </div>
     </div>
@@ -41,4 +42,4 @@
     <div class="button-holder mt-4 d-flex justify-content-center">
         <button type="submit" class="btn bg-mishmash text-white">Create</button>
     </div>
-</form> 
+</form>
