--- a/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/Views/Home/LoggedInIndex.html
+++ b/C# Web Devolpment Basic-May2018/09.EXAM PREPARATION - MISHMASH/SIS/Apps/MishMashWebApp/Views/Home/LoggedInIndex.html
@@ -1,93 +1,85 @@
-﻿@if (Model.UserRole == "Admin")
+﻿@if (User.Role == "Admin")
 {
-   <h1 class="text-center text-mishmash">Welcome, Admin-@User!</h1>
-   <div class="text-center">
-       <a class="btn btn-primary" href="/channels/create">Create channel</a>
-   </div>
+    <h1 class="text-center text-mishmash">Welcome, Admin-@User.Username!</h1>
 }
 @else
 {
-   <h1 class="text-center text-mishmash">Welcome, @User!</h1>
+    <h1 class="text-center text-mishmash">Welcome, @User.Username!</h1>
 }
 
-<h3 class="text-mishmash">Your channels</h3>
-<hr class="hr-2 bg-mishmash" />
-<div class="container-fluid fload-left">
-    <div class="row" justify-content-around>
-        @for (var i = 0; i < Model.YourChannels.Count(); i++)
+<h2 class="text-mishmash">Your channels</h2>
+<hr class="hr-2 bg-white text-white" />
+<div class="container-fluid">
+    <div class="row justify-content-around">
+        @for(var i = 0; i < Model.YourChannels.Count(); i++)
         {
-              { var channel = Model.YourChannels.ToList()[i]; }
-             @if (i % 5 == 0 && i > 1)
-             {
-               </div>
-              <div class="row justify-content-around mt-3">
-        }
-
-                  <div class="col-md-2 bg-mishmash text-center text-white">
-                      @channel.Name
-                      <hr class="hr-2 bg-white text-white" />
-                      @channel.Type Channel
-                      <hr class="hr-2 bg-white text-white" />
-                      @channel.FollowersCount Followers
-                      <hr class="hr-2 bg-white text-white" />
-                      Following
-                  </div>
-        }
-    </div>
-</div>
-
-<h3 class="text-mishmash">Suggested</h3>
-<hr class="hr-2 bg-mishmash" />
-<div class="container-fluid fload-left">
-    <div class="row" justify-content-around>
-        @for (var i = 0; i < Model.SeeOtherChannels.Count(); i++)
-        {
-        { var channel = Model.SeeOtherChannels.ToList()[i]; }
-        @if (i % 5 == 0 && i > 1)
-        {
-    </div>
-    <div class="row justify-content-around mt-3">
-        }
-
-        <div class="col-md-2 bg-mishmash text-center text-white">
-            @channel.Name
-            <hr class="hr-2 bg-white text-white" />
-            @channel.Type Channel
-            <hr class="hr-2 bg-white text-white" />
-            @channel.FollowersCount Followers
-            <hr class="hr-2 bg-white text-white" />
-            <a href="/channels/follow?id=@channel.Id" class="text-white">Follow</a> &nbsp;
-            <a href="/channels/details?id=@channel.Id" class="text-white">Details</a>
-        </div>
+            { var channel = Model.YourChannels.ToList()[i]; }
+            @if (i % 5 == 0 && i > 1)
+            {
+                </div>
+                <div class="row justify-content-around mt-3">
+            }
+            <div class="col-md-2 bg-mishmash text-center text-white">
+                @channel.Name
+                <hr class="hr-2 bg-white text-white" />
+                @channel.Type Channel
+                <hr class="hr-2 bg-white text-white" />
+                @channel.FollowersCount Following
+                <hr class="hr-2 bg-white text-white" />
+                Following
+            </div>
         }
     </div>
 </div>
 
-
-
-<h3 class="text-mishmash">See Other</h3>
-<hr class="hr-2 bg-mishmash" />
-<div class="container-fluid fload-left">
-    <div class="row" justify-content-around>
-        @for (var i = 0; i < Model.SuggestedChannels.Count(); i++)
+<h2 class="text-mishmash">Suggested</h2>
+<hr class="hr-2 bg-white text-white" />
+<div class="container-fluid">
+    <div class="row justify-content-around">
+        @for(var i = 0; i < Model.SuggestedChannels.Count(); i++)
         {
-        { var channel = Model.SuggestedChannels.ToList()[i]; }
-        @if (i % 5 == 0 && i > 1)
-        {
-    </div>
-    <div class="row justify-content-around mt-3">
+            { var channel = Model.SuggestedChannels.ToList()[i]; }
+            @if (i % 5 == 0 && i > 1)
+            {
+                </div>
+                <div class="row justify-content-around mt-3">
+            }
+            <div class="col-md-2 bg-mishmash text-center text-white">
+                @channel.Name
+                <hr class="hr-2 bg-white text-white" />
+                @channel.Type Channel
+                <hr class="hr-2 bg-white text-white" />
+                @channel.FollowersCount Following
+                <hr class="hr-2 bg-white text-white" />
+                <a href="/Channels/Follow?id=@channel.Id" class="text-white">Follow</a> &nbsp;
+                <a href="/Channels/Details?id=@channel.Id" class="text-white">Details</a>
+            </div>
         }
+    </div>
+</div>
 
-        <div class="col-md-2 bg-mishmash text-center text-white">
-            @channel.Name
-            <hr class="hr-2 bg-white text-white" />
-            @channel.Type Channel
-            <hr class="hr-2 bg-white text-white" />
-            @channel.FollowersCount Followers
-            <hr class="hr-2 bg-white text-white" />
-            <a href="/channels/follow?id=@channel.Id" class="text-white">Follow</a> &nbsp;
-            <a href="/channels/details?id=@channel.Id" class="text-white">Details</a>
-        </div>
+<h2 class="text-mishmash">See other</h2>
+<hr class="hr-2 bg-white text-white" />
+<div class="container-fluid">
+    <div class="row justify-content-around">
+        @for(var i = 0; i < Model.SeeOtherChannels.Count(); i++)
+        {
+            { var channel = Model.SeeOtherChannels.ToList()[i]; }
+            @if (i % 5 == 0 && i > 1)
+            {
+                </div>
+                <div class="row justify-content-around mt-3">
+            }
+            <div class="col-md-2 bg-mishmash text-center text-white">
+                @channel.Name
+                <hr class="hr-2 bg-white text-white" />
+                @channel.Type Channel
+                <hr class="hr-2 bg-white text-white" />
+                @channel.FollowersCount Following
+                <hr class="hr-2 bg-white text-white" />
+                <a href="/Channels/Follow?id=@channel.Id" class="text-white">Follow</a> &nbsp;
+                <a href="/Channels/Details?id=@channel.Id" class="text-white">Details</a>
+            </div>
         }
     </div>
 </div>
